--- a/mysite/templates/pybo/question_detail.html
+++ b/mysite/templates/pybo/question_detail.html
@@ -1,4 +1,89 @@
-<h1>{{ question.subject }}</h1>
-<div>
-    {{ question.content }}
+{% extends "base.html" %}
+{% block content %}
+
+<!-- CSS 적용(static/style.css -->
+<!-- {% load static %} : 스태틱 파일을 사용하기 위함이다. 그래야 href의 % static ~ %을 사용할 수 있다. -->
+<!--{% load static %}-->
+<!--<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">-->
+
+<div class="container my-3">
+
+    <!-- 질문 -->
+    <h2 class="border-bottom py-2">{{ question.subject }}</h2>
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+            <div class="d-flex justify-content-end">
+                <div class="badge bg-light text-dark p-2">
+                    {{ question.create_date }}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 답변 -->
+    <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
+    {% for answer in question.answer_set.all %}
+    <!-- 모델명_set 이 네이밍 규칙입니다. (모델명은 소문자여야 하구요) -->
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+
+            <div class="d-flex justify-content-end">
+                <div class="badge bg-light text-dark p-2">
+                    작성자 : {{ answer.writer }}
+                </div>
+            </div>
+            <div class="d-flex justify-content-end">
+                <div class="badge bg-light text-dark p-2">
+                    작성일자 : {{ answer.create_date }}
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+    <h5 class="border-bottom my-3 py-2">답변 등록하기</h5>
+    <!-- 답변 등록 -->
+    <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
+            <!-- 속성 접근할 땐 question_id가 아니라 question.id임 -->
+            {% csrf_token %}
+            {% if form.errors %}
+            <!--보안에 관련된 항목으로 form으로 전송한 데이터가 실제 웹 페이지에서 작성한 데이터인지를 판단하는 가늠자 역할을 함
+             장고는 보안공격(sql, csrf공격 등)을 잘 막아주는 프레임워크다.
+             위 코드는 어떤 해커가 이상한 방법으로 데이터를 전송할 경우에
+             서버에서 발행한 csrf_token 값과 해커가 일방적으로 보낸 csrf_token 값이 일치하지 않기 때문에
+             블록킹하는 역할을 한다. 그래서 항상 form 밑에 {% csrf_token %}이 코드를 작성해야 한다.(없으면 오류남)-->
+
+            
+            <!-- 오류표시 Start -->
+            <div class="alert alert-danger" role="alert">
+                {% for field in form %}
+                {% if field.errors %}
+                <div>
+                    <strong>{{ field.label }}</strong>
+                    {{ field.errors }}
+                </div>
+                {% endif %}
+                {% endfor %}
+            </div>
+            {% endif %}
+            <!-- 오류표시 End -->
+            
+        <div class="form-group">
+            작성자<input type="text" name="writer" id="writer" class="form-control" ></input>
+            내용<textarea name="content" id="content" class="form-control" rows="10"></textarea>
+        </div>
+        <!-- 답변 전송 버튼 생성 -->
+        <input type="submit" value="답변등록" class="btn btn-primary">
+    </form>
 </div>
+
+{% endblock %}
+
+<!--
+ ● 디자인을 적용하기 위해서는 스타일시트(stylesheet, CSS파일)를 사용해야 한다.
+     - 스타일시트 파일은 장고의 스태틱 디렉터리에 저장해야 한다.
+     - 스태틱 디렉터리(정적 페이지 요청)도 템플릿 디렉터리와 마찬가지로 config/settings.py 파일에 등록하여 사용한다.
+ ●
+ -->
+
