--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -13,9 +13,14 @@
     <title>Title</title>
 </head>
 <body>
+<!-- 네비게이션바 : include로 반복을 생략한다 -->
+{% include "navbar.html" %}
+
 <!-- 기본 템플릿 안에 삽입된 내용 Start -->
 {% block content %}
 {% endblock %}
-<!-- 기본 템플릿 안에 삽입된 내용 End -->
+<!-- 기본 템플릿 안에 삽입될 내용 End -->
+<!-- Bootstrap JS -->
+<script src="{% static 'bootstrap.min.js' %}"></script>
 </body>
 </html>
