--- a/mysite/templates/pybo/question_detail.html
+++ b/mysite/templates/pybo/question_detail.html
@@ -28,11 +28,12 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
 
-            <div class="d-flex justify-content-end">
-                <div class="badge bg-light text-dark p-2">
-                    작성자 : {{ answer.writer }}
-                </div>
-            </div>
+<!--            <div class="d-flex justify-content-end">-->
+<!--                <div class="badge bg-light text-dark p-2">-->
+<!--                    작성자 : {{ answer.author }}-->
+<!--                </div>-->
+<!--            </div>-->
+
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2">
                     작성일자 : {{ answer.create_date }}
@@ -47,30 +48,17 @@
     <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
             <!-- 속성 접근할 땐 question_id가 아니라 question.id임 -->
             {% csrf_token %}
-            {% if form.errors %}
             <!--보안에 관련된 항목으로 form으로 전송한 데이터가 실제 웹 페이지에서 작성한 데이터인지를 판단하는 가늠자 역할을 함
              장고는 보안공격(sql, csrf공격 등)을 잘 막아주는 프레임워크다.
              위 코드는 어떤 해커가 이상한 방법으로 데이터를 전송할 경우에
              서버에서 발행한 csrf_token 값과 해커가 일방적으로 보낸 csrf_token 값이 일치하지 않기 때문에
              블록킹하는 역할을 한다. 그래서 항상 form 밑에 {% csrf_token %}이 코드를 작성해야 한다.(없으면 오류남)-->
 
-            
-            <!-- 오류표시 Start -->
-            <div class="alert alert-danger" role="alert">
-                {% for field in form %}
-                {% if field.errors %}
-                <div>
-                    <strong>{{ field.label }}</strong>
-                    {{ field.errors }}
-                </div>
-                {% endif %}
-                {% endfor %}
-            </div>
-            {% endif %}
-            <!-- 오류표시 End -->
-            
+            <!-- 오류 발생 코드 -->
+            {% include "form_errors.html" %}
+
         <div class="form-group">
-            작성자<input type="text" name="writer" id="writer" class="form-control" ></input>
+<!--            작성자<input type="text" name="author" id="author" class="form-control" ></input>-->
             내용<textarea name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
         <!-- 답변 전송 버튼 생성 -->
